updated to get python types as input for a single element in a batch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.5)
 
 project(ZCTC)
 
 set(CMAKE_CXX_STANDARD 17)
 
-if(NOT DEFINED PYTHON_EXECUTABLE OR NOT DEFINED CMAKE_INSTALL_PREFIX)
-    message(FATAL_ERROR "Please specify PYTHON_EXECUTABLE and CMAKE_INSTALL_PREFIX")
+if(NOT DEFINED PYTHON_EXECUTABLE OR NOT DEFINED CMAKE_INSTALL_PREFIX OR NOT DEFINED PYTHON_INCLUDE_DIR)
+    message(FATAL_ERROR "Please specify PYTHON_EXECUTABLE and CMAKE_INSTALL_PREFIX and PYTHON_INCLUDE_DIR")
 endif()
 
 add_compile_options(-Wall -pedantic -fPIC)
@@ -18,11 +18,12 @@ FetchContent_Declare(
     GIT_TAG v2.10.4
 )
 FetchContent_MakeAvailable(pybind11)
-# add_directory(pybind11)
 
 pybind11_add_module(_zctc SHARED ${CMAKE_SOURCE_DIR}/src/binding.cpp)
-include_directories(${CMAKE_SOURCE_DIR}/include ${pybind11_INCLUDE_DIR})
-# add_executable(zctc ${CMAKE_SOURCE_DIR}/src/main.cpp)
+include_directories(${CMAKE_SOURCE_DIR}/include ${pybind11_INCLUDE_DIR} ${PYTHON_INCLUDE_DIR})
+link_libraries(_zctc ${PYTHON_LIBRARIES})
+
+add_executable(zctc ${CMAKE_SOURCE_DIR}/src/main.cpp)
 
 install(TARGETS _zctc DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
-# install(TARGETS zctc DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
+install(TARGETS zctc DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
