--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,8 +22,13 @@ FetchContent_MakeAvailable(pybind11)
 pybind11_add_module(_zctc SHARED ${CMAKE_SOURCE_DIR}/src/binding.cpp)
 include_directories(${CMAKE_SOURCE_DIR}/include ${pybind11_INCLUDE_DIR} ${PYTHON_INCLUDE_DIR})
 link_libraries(_zctc ${PYTHON_LIBRARIES})
-
-add_executable(zctc ${CMAKE_SOURCE_DIR}/src/main.cpp)
-
 install(TARGETS _zctc DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
-install(TARGETS zctc DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
+
+set_target_properties(_zctc PROPERTIES
+    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
+)
+
+if(CMAKE_BUILD_TYPE STREQUAL Debug)
+    add_executable(zctc ${CMAKE_SOURCE_DIR}/src/main.cpp)
+    install(TARGETS zctc DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
+endif()
