--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_minimum_required(VERSION 3.5)
 project(ZCTC)
 
 set(CMAKE_CXX_STANDARD 17)
+set(KENLM_MAX_ORDER 8)
+set(BUILD_SHARED_LIBS ON)
 
 if(NOT DEFINED PYTHON_EXECUTABLE OR NOT DEFINED CMAKE_INSTALL_PREFIX OR NOT DEFINED PYTHON_INCLUDE_DIR)
     message(FATAL_ERROR "Please specify PYTHON_EXECUTABLE and CMAKE_INSTALL_PREFIX and PYTHON_INCLUDE_DIR")
@@ -10,8 +12,15 @@ endif()
 
 add_compile_options(-Wall -pedantic -fPIC)
 
-
 include(FetchContent)
+
+FetchContent_Declare(
+    kenlm_external
+    GIT_REPOSITORY https://github.com/kpu/kenlm.git
+    GIT_TAG 716251e7 # or specify a specific tag or branch
+)
+FetchContent_MakeAvailable(kenlm_external)
+
 FetchContent_Declare(
     pybind11
     GIT_REPOSITORY https://github.com/pybind/pybind11.git
@@ -21,14 +30,10 @@ FetchContent_MakeAvailable(pybind11)
 
 pybind11_add_module(_zctc SHARED ${CMAKE_SOURCE_DIR}/src/binding.cpp)
 include_directories(${CMAKE_SOURCE_DIR}/include ${pybind11_INCLUDE_DIR} ${PYTHON_INCLUDE_DIR})
-link_libraries(_zctc ${PYTHON_LIBRARIES})
+link_libraries(_zctc ${PYTHON_LIBRARIES} kenlm_builder kenlm_filter kenlm_util kenlm z bz2 lzma)
 install(TARGETS _zctc DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
 
-set_target_properties(_zctc PROPERTIES
-    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
-)
+add_executable(zctc ${CMAKE_SOURCE_DIR}/src/main.cpp)
+install(TARGETS zctc DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
 
-if(CMAKE_BUILD_TYPE STREQUAL Debug)
-    add_executable(zctc ${CMAKE_SOURCE_DIR}/src/main.cpp)
-    install(TARGETS zctc DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
-endif()
+set_target_properties(_zctc zctc kenlm_builder kenlm_filter kenlm_util kenlm kenlm_interpolate PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
