OpenFST dependency added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,8 @@ set(CMAKE_CXX_STANDARD 17)
 set(KENLM_MAX_ORDER 8)
 set(BUILD_SHARED_LIBS ON)
 
-if(NOT DEFINED PYTHON_EXECUTABLE OR NOT DEFINED CMAKE_INSTALL_PREFIX OR NOT DEFINED PYTHON_INCLUDE_DIR)
-    message(FATAL_ERROR "Please specify PYTHON_EXECUTABLE and CMAKE_INSTALL_PREFIX and PYTHON_INCLUDE_DIR")
+if(NOT DEFINED PYTHON_EXECUTABLE OR NOT DEFINED CMAKE_INSTALL_PREFIX OR NOT DEFINED PYTHON_INCLUDE_DIR OR NOT DEFINED FST_DIR)
+    message(FATAL_ERROR "Please specify PYTHON_EXECUTABLE and CMAKE_INSTALL_PREFIX and PYTHON_INCLUDE_DIR and FST_DIR")
 endif()
 
 add_compile_options(-Wall -pedantic -fPIC)
@@ -28,12 +28,13 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(pybind11)
 
-pybind11_add_module(_zctc SHARED ${CMAKE_SOURCE_DIR}/src/binding.cpp)
-include_directories(${CMAKE_SOURCE_DIR}/include ${pybind11_INCLUDE_DIR} ${PYTHON_INCLUDE_DIR})
-link_libraries(_zctc ${PYTHON_LIBRARIES} kenlm_builder kenlm_filter kenlm_util kenlm z bz2 lzma)
+file(GLOB FST_SOURCES ${FST_DIR}/src/lib/*.cc ${FST_DIR}/src/script/*.cc)
+pybind11_add_module(_zctc SHARED ${CMAKE_SOURCE_DIR}/src/binding.cpp ${FST_SOURCES})
+include_directories(${CMAKE_SOURCE_DIR}/include ${pybind11_INCLUDE_DIR} ${PYTHON_INCLUDE_DIR} ${FST_DIR}/src/include ${kenlm_INCLUDE_DIR})
+link_libraries(_zctc ${PYTHON_LIBRARIES} kenlm_builder kenlm_interpolate kenlm_filter kenlm_util kenlm z bz2 lzma)
 install(TARGETS _zctc DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
 
 add_executable(zctc ${CMAKE_SOURCE_DIR}/src/main.cpp)
 install(TARGETS zctc DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
 
-set_target_properties(_zctc zctc kenlm_builder kenlm_filter kenlm_util kenlm kenlm_interpolate PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
+set_target_properties(_zctc zctc kenlm_filter kenlm_builder kenlm_util kenlm kenlm_interpolate PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
