refined linking error with kenlm library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,13 +11,12 @@ if(NOT DEFINED PYTHON_EXECUTABLE OR NOT DEFINED CMAKE_INSTALL_PREFIX OR NOT DEFI
 endif()
 
 add_compile_options(-Wall -pedantic -fPIC -DKENLM_MAX_ORDER=6)
-
+find_package(Boost REQUIRED)
 include(FetchContent)
 
 FetchContent_Declare(
     kenlm_external
     GIT_REPOSITORY https://github.com/kpu/kenlm.git
-    GIT_TAG 716251e7 # or specify a specific tag or branch
 )
 FetchContent_Declare(
     pybind11
@@ -32,11 +31,11 @@ file(GLOB FST_SOURCES ${FST_DIR}/src/lib/*.cc ${FST_DIR}/src/script/*.cc)
 pybind11_add_module(_zctc SHARED ${CMAKE_SOURCE_DIR}/src/binding.cpp ${FST_SOURCES})
 include_directories(${CMAKE_SOURCE_DIR}/include ${pybind11_INCLUDE_DIR} ${PYTHON_INCLUDE_DIR} ${FST_DIR}/src/include ${FETCHCONTENT_BASE_DIR}/kenlm_external-src)
 
-link_libraries(_zctc ${PYTHON_LIBRARIES} kenlm_builder kenlm_interpolate kenlm_filter kenlm_util kenlm z bz2 lzma)
+target_link_libraries(_zctc PUBLIC ${PYTHON_LIBRARIES} kenlm_filter kenlm_builder kenlm_util kenlm z bz2 lzma)
 install(TARGETS _zctc DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
 
 # add_executable(zctc ${CMAKE_SOURCE_DIR}/src/main.cpp)
 # install(TARGETS zctc DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
 # zctc
 
-set_target_properties(_zctc kenlm_filter kenlm_builder kenlm_util kenlm kenlm_interpolate PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
+set_target_properties(_zctc kenlm_filter kenlm_builder kenlm_util kenlm PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
