--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ FetchContent_MakeAvailable(pybind11 kenlm_external threadpool_external)
 
 file(GLOB FST_SOURCES ${FST_DIR}/src/lib/*.cc ${FST_DIR}/src/script/*.cc)
 
-if(${CMAKE_BUILD_TOOL} STREQUAL Debug)
+if(${CMAKE_BUILD_TYPE} STREQUAL Debug)
     add_compile_options(-fsanitize=leak -fsanitize=undefinied -fsanitize=address)
 endif()
 
