--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ FetchContent_MakeAvailable(pybind11 kenlm_external threadpool_external)
 file(GLOB FST_SOURCES ${FST_DIR}/src/lib/*.cc ${FST_DIR}/src/script/*.cc)
 
 if(${CMAKE_BUILD_TYPE} STREQUAL Debug)
-    add_compile_options(-fsanitize=leak -fsanitize=undefinied -fsanitize=address)
+    add_compile_options(-fsanitize=leak -fsanitize=undefined)
 endif()
 
 pybind11_add_module(_zctc SHARED ${CMAKE_SOURCE_DIR}/src/binding.cpp ${FST_SOURCES})
