--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,9 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -g")
 
 find_package(Boost REQUIRED)
+find_library(PTHREAD NAMES pthread REQUIRED)
+find_library(DL NAMES dl REQUIRED)
+find_library(UTIL NAMES util REQUIRED)
 find_library(Z_LIB NAMES z)
 find_library(BZ2_LIB NAMES bz2)
 find_library(LZMA_LIB NAMES lzma)
