--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,9 @@ readme = "README.md"
 build = "build.py"
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.12"
-torch = ">=2.1"
-numpy = "*"
+python = "^3.10.6"
+torch = {url = "https://download.pytorch.org/whl/cu121/torch-2.2.1%2Bcu121-cp310-cp310-linux_x86_64.whl" }
+numpy = "1.23.5"
 omegaconf = "*"
 registrable = "*"
 
