Resolved segmentation fault occurance due to 'LM' and 'Lexicon', this was due to not transferring the LM and Lexicon state in the copy constructor of the node.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,6 +26,7 @@ repos:
         entry: clang-format
         language: python
         args:
+          - -style=file
           - -i
           - "**/**/*hh"
           - "**/*cpp"
