Included 'Parlance style pruning' and also modified beta usage as 'Parlance's' and updated few docs.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "zctc"
 version = "0.1.0"
-description = "Beam search CTC decoder repo"
-authors = ["DurgaiVS <durgaivel0309@gmail.com>"]
+description = "A fast and efficient CTC beam decoder with C++ backend."
+authors = ["DurgaiVelSelvan <durgaivelselvan.mn@zohocorp.com>"]
 readme = "README.md"
 build = "build.py"
 
