Refined directory structure and minor updates in language model beta (finalised asper 'parlance') and updated the probability parsing in 'double' instead of template datatype for better numerical precision

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "zctc"
 version = "0.1.0"
 description = "A fast and efficient CTC beam decoder with C++ backend."
-authors = ["DurgaiVelSelvan <durgaivelselvan.mn@zohocorp.com>"]
+authors = ["DurgaiVelSelvan <durgaivel0309@gmail.com>"]
 readme = "README.md"
 build = "build.py"
 
